Partial_14Dec2021/force-app/main/default/objects/Follow_Up__c/Follow_Up__c.object-meta.xml
<CustomObject>
    <label>Follow Up</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Follow Up Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow Up</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>