Partial_14Dec2021/force-app/main/default/objects/Follow_Up__c/fields/Feedback_Details__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Details__c</fullName>
    <label>Feedback Details</label>
    <type>TextArea</type>
</CustomField>