Partial_14Dec2021/force-app/main/default/objects/Follow_Up__c/fields/Type_of_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Feedback__c</fullName>
    <label>Type of Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Party</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>